--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "sequelize": "^6.12.4",
+    "sequelize-auto": "^0.8.8"
   }
 }
