--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-sequelize": "^0.9.0",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.12.4",
     "sequelize-auto": "^0.8.8"
