--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "pug": "2.0.0-beta11",
     "sequelize": "^6.12.4",
     "sequelize-auto": "^0.8.8"
+  },
+  "devDependencies": {
+    "event-stream": "^4.0.1"
   }
 }
