--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "cookie-session": "^2.0.0",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
+    "easy-rbac": "^3.2.0",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
+    "express-ws": "^5.0.2",
     "http-errors": "~1.6.3",
+    "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
@@ -27,8 +30,7 @@
     "passport-local-sequelize": "^0.9.0",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.12.4",
-    "sequelize-auto": "^0.8.8",
-    "socket.io": "^4.4.1"
+    "sequelize-auto": "^0.8.8"
   },
   "devDependencies": {
     "event-stream": "^4.0.1"
