--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./app.js",
     "watch": "nodemon --ext js,pug --ignore public"
   },
   "dependencies": {
@@ -30,7 +30,8 @@
     "passport-local-sequelize": "^0.9.0",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.12.4",
-    "sequelize-auto": "^0.8.8"
+    "sequelize-auto": "^0.8.8",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "event-stream": "^4.0.1"
