--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
-    "event-stream": "^4.0.1"
+    "event-stream": "^4.0.1",
+    "sequelize-cli": "^6.4.1"
   }
 }
