--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "pug": "^3.0.1",
     "sequelize": "^6.12.4",
     "sequelize-auto": "^0.8.8",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "umzug": "^3.0.0"
   },
   "devDependencies": {
     "event-stream": "^4.0.1",
