--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,7 @@ MYSQL_PASSWORD=example-mysql-password
 DOMAIN=192.168.1.3
 APP_URL=http://192.168.1.3:3000
 TIMEZONE=Europe/Amsterdam
+ADMIN_PASSWORD=3xamplePwd!
+ADMIN_EMAIL=admin@capulus.shop
 PORT=9000
 WSPORT=9001
