Switch to BabelEdit for i18n management Add Pickwick tea products Add category stock Add category and product hide_if_unavailable

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./app.js",
-    "watch": "nodemon --ext js,pug --ignore public"
+    "watch": "nodemon --ext js,pug,sql --ignore public"
   },
   "dependencies": {
     "connect-flash": "^0.1.1",
