--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-sequelize": "^0.9.0",
+    "passport-unique-token": "^3.0.0",
     "pug": "^3.0.1",
     "sequelize": "^6.12.4",
     "sequelize-auto": "^0.8.8",
