--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,6 @@ APP_URL=http://192.168.1.3:3000
 TIMEZONE=Europe/Amsterdam
 ADMIN_PASSWORD=3xamplePwd!
 ADMIN_EMAIL=admin@capulus.shop
+RESET_DB=no
 PORT=9000
 WSPORT=9001
