--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.2",
     "express-ws": "^5.0.2",
+    "firebase-admin": "^10.0.2",
     "http-errors": "~1.6.3",
     "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
