--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ SESSION_EXPIRY=2*24*60*60*1000
 COOKIE_SECRET=somecookiesecret
 GOOGLE_CLIENT_ID=example-client-id
 GOOGLE_CLIENT_SECRET=example-client-secret
+SENTRY_DSN=http://sentry-dsn-here
 MYSQL_HOST=localhost
 MYSQL_DB=capulus
 MYSQL_USER=capulus
