--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "watch": "nodemon --ext js,pug,sql --ignore public"
   },
   "dependencies": {
+    "@sentry/node": "^6.19.2",
+    "@sentry/tracing": "^6.19.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
